force-app/main/default/objects/Certification_Setting__mdt/Certification_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Certification Setting</label>
    <pluralLabel>Certification Settings</pluralLabel>
</CustomObject>