force-app/main/default/objects/Certification_Setting__mdt/fields/Exam_Fee__c.field-meta.xml
<CustomField>
    <fullName>Exam_Fee__c</fullName>
    <label>Exam Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>