force-app/main/default/objects/Certification_Setting__mdt/fields/Passing_Score__c.field-meta.xml
<CustomField>
    <fullName>Passing_Score__c</fullName>
    <label>Passing Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>