force-app/main/default/objects/Certification_Setting__mdt/fields/Prerequisite__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite__c</fullName>
    <label>Prerequisite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>