force-app/main/default/objects/Certification_Setting__mdt/fields/Question_Count__c.field-meta.xml
<CustomField>
    <fullName>Question_Count__c</fullName>
    <label>Question Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>